# libs-gdl2

./: ANNOUNCE  AUTHORS  ChangeLog  GDL2.gsdoc  GNUmakefile  GNUmakefile.in  INSTALL  Makefile.postamble  NEWS  README  TODO  Version  common.make  config.h.in  config.make.in  configure  configure.ac  gdl2.make.in  variable-processing.make
Apps/EOModelEditor/: AdaptorsPanel.h  AdaptorsPanel.m  CodeGenerator.h  CodeGenerator.m  ConsistencyChecker.m  ConsistencyResults.h  DataBrowser.h  DataBrowser.m  EOAdditions.m  EOMEDocument.h  EOMEDocument.m  EOMEEOAccessAdditions.h  EOMEEOAccessAdditions.m  EOModelEditorApp.h  EOModelEditorApp.m  EOModelEditorInfo.plist  EOWindow.h  EOWindow.m  GNUmakefile  Preferences.h  Preferences.m  README  SQLGenerator.h  SQLGenerator.m  TableViewController.h  TableViewController.m  main.m
Apps/EOModeler/: EODefines.h  EOMInspector.h  EOMInspector.m  EOMInspectorController.h  EOMInspectorController.m  EOModelExtensions.h  EOModelExtensions.m  GNUmakefile  Makefile.postamble  Makefile.preamble
DBModeler/: AdaptorsPanel.h  AdaptorsPanel.m  AttributeCell.h  AttributeCell.m  CodeGenerator.m  ConsistencyChecker.h  ConsistencyChecker.m  ConsistencyResults.h  ConsistencyResults.m  DefaultColumnProvider.h  DefaultColumnProvider.m  DiagramEditor.h  DiagramEditor.m  DiagramView.h  DiagramView.m  EOAdditions.h  EOAdditions.m  EntityView.h  EntityView.m  GNUmakefile  KVDataSource.h  KVDataSource.m  MainModelEditor.h  MainModelEditor.m  Modeler.h  Modeler.m  ModelerAttributeEditor.h  ModelerAttributeEditor.m  ModelerEntityEditor.h  ModelerEntityEditor.m  ModelerTableEmbedibleEditor.h  ModelerTableEmbedibleEditor.m  NSView+Additions.h  NSView+Additions.m  Preferences.h  Preferences.m  SQLGenerator.h  SQLGenerator.m  main.m
DBModeler/Inspectors/: AdvancedEntityInspector.h  AdvancedEntityInspector.m  AttributeInspector.gsmarkup  AttributeInspector.h  AttributeInspector.m  GNUmakefile  RelationshipInspector.h  RelationshipInspector.m  RelationshipInspector.tiff
DBModeler/Resources/: AllowsNull_On.tiff  ClassProperty_Diagram.tiff  ClassProperty_On.tiff  DBModeler.icns  DBModeler.tiff  Info-gnustep.plist  Key_On.tiff  Locking_Header.tiff  Locking_On.tiff  Menu-Cocoa.gsmarkup  Menu-GNUstep.gsmarkup  ModelDrag.tiff  SQLGenerator.gsmarkup
Documentation/: GNUmakefile
Documentation/GDL2Intro/: GDL2Intro.texi  GNUmakefile
EOAccess/: EOAccess.gsdoc  EOAccess.h  EOAccessFault.h  EOAccessFault.m  EOAccessFaultPriv.h  EOAdaptor.h  EOAdaptor.m  EOAdaptorChannel.h  EOAdaptorChannel.m  EOAdaptorContext.h  EOAdaptorContext.m  EOAdaptorOperation.m  EOAdaptorPriv.h  EOAttribute.h  EOAttribute.m  EOAttributePriv.h  EODatabase.h  EODatabase.m  EODatabaseChannel.h  EODatabaseChannel.m  EODatabaseChannelPriv.h  EODatabaseContext.h  EODatabaseContext.m  EODatabaseContextPriv.h  EODatabaseDataSource.h  EODatabaseDataSource.m  EODatabaseOperation.h  EODatabaseOperation.m  EODatabaseOperationPriv.h  EODefines.h  EODeprecated.h  EOEntity.h  EOEntity.m  EOEntityPriv.h  EOExpressionArray.h  EOExpressionArray.m  EOGenericRecord.h  EOGenericRecord.m  EOJoin.h  EOJoin.m  (+29 more)
EOAdaptors/: GNUmakefile.in  Makefile.postamble
EOControl/: EOAggregateEvent.h  EOAggregateEvent.m  EOAndQualifier.m  EOArrayDataSource.h  EOArrayDataSource.m  EOCheapArray.h  EOCheapArray.m  EOClassDescription.h  EOClassDescription.m  EOControl.gsdoc  EOControl.h  EOCustomObject.h  EOCustomObject.m  EODataSource.h  EODataSource.m  EODebug.h  EODebug.m  EODefines.h  EODeprecated.h  EODepricated.h  EODetailDataSource.h  EODetailDataSource.m  EOEditingContext.h  EOEditingContext.m  EOEvent.h  EOEvent.m  EOEventCenter.h  EOEventCenter.m  EOFault.h  EOFault.m  EOFaultHandler.m  EOFetchSpecification.h  EOFetchSpecification.m  EOGenericRecord.h  EOGenericRecord.m  EOGlobalID.h  EOGlobalID.m  EOKeyComparisonQualifier.m  EOKeyGlobalID.h  EOKeyGlobalID.m  (+40 more)
EOInterface/: EOActionAssociation.h  EOActionAssociation.m  EOActionCellAssociation.m  EOActionInsertionAssociation.h  EOActionInsertionAssociation.m  EOAspectConnector.h  EOAspectConnector.m  EOAssociation.h  EOAssociation.m  EOColumnAssociation.h  EOColumnAssociation.m  EOComboBoxAssociation.h  EOComboBoxAssociation.m  EOControlAssociation.h  EOControlAssociation.m  EODeprecated.h  EODetailSelectionAssociation.h  EODetailSelectionAssociation.m  EODisplayGroup.h  EODisplayGroup.m  EOGenericControlAssociation.m  EOInterface.gsdoc  EOInterface.h  EOMasterCopyAssociation.h  EOMasterCopyAssociation.m  EOMasterDetailAssociation.h  EOMasterDetailAssociation.m  EOMasterPeerAssociation.m  EOMatrixAssociation.h  EOMatrixAssociation.m  EOPickTextAssociation.h  EOPickTextAssociation.m  EOPopUpAssociation.h  EOPopUpAssociation.m  EORadioMatrixAssociation.h  EORadioMatrixAssociation.m  EORecursiveBrowserAssociation.h  EORecursiveBrowserAssociation.m  EOTableViewAssociation.m  EOTextAssociation.h  (+8 more)
EOModeler/: EODefines.h  EOMInspector.h  EOMInspector.m  EOMInspectorController.h  EOMInspectorController.m  EOModelExtensions.h  EOModelExtensions.m  EOModelerApp.h  EOModelerApp.m  EOModelerDocument.h  EOModelerDocument.m  EOModelerEditor.h  EOModelerEditor.m  GNUmakefile  Makefile.postamble  Makefile.preamble
Examples/: GNUmakefile  GNUmakefile.eoexample  GNUmakefile.eoexample2  library.eomodel
GDL2Palette/: ConnectionInspector.h  ConnectionInspector.m  DisplayGroupInspector.h  DisplayGroupInspector.m  Foundation+Categories.h  Foundation+Categories.m  GDL2Palette.tiff  GNUmakefile  IB+Categories.m  KeyWrapper.h  KeyWrapper.m  Palette.h  Palette.m  README  ResourceManager.h  ResourceManager.m  palette.table
Tools/: EOAttribute+GSDoc.h  EOAttribute+GSDoc.m  EOEntity+GSDoc.h  EOEntity+GSDoc.m  EOJoin+GSDoc.h  EOJoin+GSDoc.m  EOModel+GSDoc.h  EOModel+GSDoc.m  EORelationship+GSDoc.h  EORelationship+GSDoc.m  GNUmakefile  Makefile.postamble  Makefile.preamble  NSArray+GSDoc.h  NSArray+GSDoc.m  NSDictionary+GSDoc.h  NSDictionary+GSDoc.m  eomodeltemplate.gsdoc  eoutil.m  gdl2gsdoc.gsdoc  gsdoc-model.m
Trading/: GNUmakefile  TradingData.h  TradingData.m  create.m
config/: postgres.m4  sqlite3.m4
(+187 files in other folders)
